// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#getRollupConfig getRollupConfig as a whole works - default options 1`] = `
Array [
  Object {
    "input": "./node_modules/intersection-observer/intersection-observer.js",
    "output": Array [
      Object {
        "file": "/dist/_elderjs/static/intersection-observer.js",
        "format": "iife",
        "name": "./_elderjs/static/intersection-observer.js",
        "plugins": Array [
          Object {
            "name": "terser",
            "renderChunk": [Function],
          },
        ],
      },
    ],
  },
  Object {
    "cache": true,
    "input": Array [
      "rc/layouts/*.svelte",
      "rc/routes/**/*.svelte",
      "rc/components/**/*.svelte",
      "/src/plugins/elderjs-plugin-reload/*.svelte",
    ],
    "output": Object {
      "dir": "test/___ELDER___/compiled",
      "exports": "auto",
      "format": "cjs",
      "sourcemap": false,
    },
    "plugins": Array [
      Object {
        "options": [Function],
        "pluginName": "rollup-plugin-multi-input",
      },
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": Array [
      "rc/components/**/*.svelte",
    ],
    "output": Array [
      Object {
        "dir": "test/public/svelte",
        "entryFileNames": "[name].[hash].js",
        "format": "esm",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "options": [Function],
        "pluginName": "rollup-plugin-multi-input",
      },
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
]
`;

exports[`#getRollupConfig getRollupConfig as a whole works - legacy: true 1`] = `
Array [
  Object {
    "input": "./node_modules/intersection-observer/intersection-observer.js",
    "output": Array [
      Object {
        "file": "/dist/_elderjs/static/intersection-observer.js",
        "format": "iife",
        "name": "./_elderjs/static/intersection-observer.js",
        "plugins": Array [
          Object {
            "name": "terser",
            "renderChunk": [Function],
          },
        ],
      },
    ],
  },
  Object {
    "cache": true,
    "input": Array [
      "rc/layouts/*.svelte",
      "rc/routes/**/*.svelte",
      "rc/components/**/*.svelte",
      "/src/plugins/elderjs-plugin-reload/*.svelte",
    ],
    "output": Object {
      "dir": "test/___ELDER___/compiled",
      "exports": "auto",
      "format": "cjs",
      "sourcemap": false,
    },
    "plugins": Array [
      Object {
        "options": [Function],
        "pluginName": "rollup-plugin-multi-input",
      },
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": Array [
      "rc/components/**/*.svelte",
    ],
    "output": Array [
      Object {
        "dir": "test/public/svelte",
        "entryFileNames": "[name].[hash].js",
        "format": "esm",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "options": [Function],
        "pluginName": "rollup-plugin-multi-input",
      },
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": "pluginAComponent1.svelte",
    "output": Array [
      Object {
        "dir": "test/public/svelte/iife/",
        "entryFileNames": "[name].[hash].js",
        "format": "iife",
        "name": "___elderjs_pluginAComponent1",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": "pluginAComponent2.svelte",
    "output": Array [
      Object {
        "dir": "test/public/svelte/iife/",
        "entryFileNames": "[name].[hash].js",
        "format": "iife",
        "name": "___elderjs_pluginAComponent2",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": "AnythingCanBeHere",
    "output": Array [
      Object {
        "dir": "test/public/svelte/iife/",
        "entryFileNames": "[name].[hash].js",
        "format": "iife",
        "name": "___elderjs_AnythingCanBeHere",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": "pluginBComponent1.svelte",
    "output": Array [
      Object {
        "dir": "test/public/svelte/iife/",
        "entryFileNames": "[name].[hash].js",
        "format": "iife",
        "name": "___elderjs_pluginBComponent1",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": "pluginBComponent2.svelte",
    "output": Array [
      Object {
        "dir": "test/public/svelte/iife/",
        "entryFileNames": "[name].[hash].js",
        "format": "iife",
        "name": "___elderjs_pluginBComponent2",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": "/src/plugins/elderjs-plugin-reload/SimplePlugin.svelte",
    "output": Array [
      Object {
        "dir": "test/public/svelte/iife/",
        "entryFileNames": "[name].[hash].js",
        "format": "iife",
        "name": "___elderjs_SimplePlugin",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
  Object {
    "cache": true,
    "input": "/src/plugins/elderjs-plugin-reload/Test.svelte",
    "output": Array [
      Object {
        "dir": "test/public/svelte/iife/",
        "entryFileNames": "[name].[hash].js",
        "format": "iife",
        "name": "___elderjs_Test",
        "sourcemap": false,
      },
    ],
    "plugins": Array [
      Object {
        "buildStart": [Function],
        "name": "replace",
        "renderChunk": [Function],
        "transform": [Function],
      },
      Object {
        "name": "json",
        "transform": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "load": [Function],
        "name": "rollup-plugin-elder",
        "renderChunk": [Function],
        "resolveId": [Function],
        "transform": [Function],
        "watchChange": [Function],
        "writeBundle": [Function],
      },
      Object {
        "buildStart": [Function],
        "generateBundle": [Function],
        "getPackageInfoForId": [Function],
        "load": [Function],
        "name": "node-resolve",
        "resolveId": [Function],
      },
      Object {
        "buildStart": [Function],
        "load": [Function],
        "moduleParsed": [Function],
        "name": "commonjs",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "load": [Function],
        "name": "babel",
        "resolveId": [Function],
        "transform": [Function],
      },
      Object {
        "name": "terser",
        "renderChunk": [Function],
      },
    ],
    "treeshake": true,
  },
]
`;
